<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="pref_hippa_setting" >
        <ListPreference
            android:defaultValue="false"
            android:key="prefHippaCompliant"
            android:summary="@string/pref_hippa_summary"
            android:entryValues="@array/hippaCompliant"
            android:title="@string/pref_hippa_compliant">
        </ListPreference>
    </PreferenceCategory>
 
</PreferenceScreen>