<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step1Activity" >
    
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#971425"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/home_button_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/home_button_75" />
        
        <ImageButton
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/about_button_75" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#971425"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/help_button_50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/osu_tbi_id"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/settings_button_50" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/step_1_question_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_1_question"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@+id/step_1_title"
        android:background="#ffffff"
        android:src="@drawable/yes_50" />

    <ImageButton
        android:id="@+id/step_1_question_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/step_1_question_yes"
        android:layout_toRightOf="@+id/step_1_title"
        android:background="#ffffff"
        android:src="@drawable/no_50" />

    <TextView
        android:id="@+id/step_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:layout_below="@+id/header"
        android:text="@string/step_1"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step_1_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_1_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:text="@string/step_1_question1" />

</RelativeLayout>
